# gst-plugins-imsdk

./: CMakeLists.txt
.github/actions/resolve-nightly-download-url/: action.yml
.github/workflows/: imsdk_compilation.yml  pre_merge.yml
ci/: build.sh
debian/: gstreamer1.0-qcom-python-examples.install  gstreamer1.0-qcom-sample-apps.install  rules
gst-plugin-base/: CMakeLists.txt
gst-plugin-base/gst/allocators/: CMakeLists.txt
gst-plugin-base/gst/cv/: CMakeLists.txt
gst-plugin-base/gst/gfx/: CMakeLists.txt
gst-plugin-base/gst/memory/: CMakeLists.txt
gst-plugin-base/gst/ml/: CMakeLists.txt
gst-plugin-base/gst/utils/: CMakeLists.txt
gst-plugin-base/gst/video/: CMakeLists.txt
gst-plugin-codec2/c2-engine/: c2-engine-params.h  c2-engine-utils.cc  c2-engine.cc
gst-plugin-codec2/c2venc/: c2venc.c  c2venc.h
gst-plugin-examples/gst-camera-metadata-example/: main.cc
gst-plugin-examples/gst-camera-prebuffered-data-app/: main.cc
gst-plugin-mlmetaextractor/: mlmetaextractor.c
gst-plugin-vtransform/: videotransform.c
gst-python-examples/: gst-concurrent-videoplay-composition.py  gst-opencv-transform.py
gst-sample-apps/: CMakeLists.txt
gst-sample-apps/GstD-camera-single-stream-example/: main.cc
gst-sample-apps/gst-audio-decode-example/: main.cc
gst-sample-apps/gst-audio-video-playback/: main.cc
gst-sample-apps/gst-concurrent-videoplay-composition/: main.cc
gst-sample-apps/gst-gesture-recognition/: CMakeLists.txt  main.c
gst-sample-apps/gst-jpg-decode-example/: main.cc
gst-sample-apps/gst-multi-stream-example/: main.cc
gst-sample-apps/gst-ppe-detection/: CMakeLists.txt  main.c
gst-sample-apps/gst-sample-apps-utils/: gst_sample_apps_utils.c
gst-sample-apps/gst-smartcodec-example/: main.c
gst-sample-apps/gst-transform-example/: main.c
gst-sample-apps/gst-video-playback-example/: main.c
gst-sample-apps/gst-video-transcode-example/: main.cc
gst-sample-apps/gst-videocodec-concurrent-playback/: main.cc
gst-sample-apps/gst-vlm-app/: CMakeLists.txt  standalone-genie-vlm-test.cc  vlm-multistream-usecase-ipc.cc  vlm-multistream-usecase.cc  vlm-rz-usecase-ipc.cc  vlm-rz-usecase.cc
gst-sample-apps/gst-vlm-app/Genie/: CMakeLists.txt  GenieVLM.cc  GenieVLM.h
gst-sample-apps/gst-vlm-app/IPC/: IpcClient.h  IpcProtocol.h
gst-sample-apps/gst-weston-composition-example/: main.cc
